
    o	plot.dendrogram (`mva' package) now draws leaf labels if present
	by default.

    o   An attempt to open() an already open connection will be detected
	and ignored with a warning.  This avoids improperly closing
	some types of connections if they are opened repeatedly.

    o	New function force() to force evaluation of a formal argument.


INSTALLATION CHANGES

    o	TITLE files in packages are no longer used, the Title field
	in the DESCRIPTION file being preferred.  TITLE files will be
	ignored in both installed packages and source packages.

    o	When searching for a Fortran 77 compiler, configure by default
	now also looks for Fujitsu's frt and Compaq's fort, but no
	longer for cf77 and cft77.

    o	Configure checks that mixed C/Fortran code can be run before
	checking compatibility on ints and doubles: the latter test
	was sometimes failing because the Fortran libraries were not
	found.

    o	PCRE and bzip2 are built from versions in the R sources if the
	appropriate library is not found.

    o	New configure option --with-lapack to allow high-performance
	LAPACK libraries to be used: a generic LAPACK library will be
	used if found.	This option is not the default.

    o	New configure options --with-libpng, --with-jpeglib, --with-zlib,
	--with-bzlib and --with-pcre, principally to allow these
	libraries to be avoided if they are unsuitable.

    o	If the precious variable R_BROWSER is set at configure time
	it overrides the automatic selection of the default browser.
	It should be set to the full path unless the browser appears
	at different locations on different client machines.

    o	Perl requirements are down again to 5.004 or newer.

    o	Autoconf 2.57 or later is required to build the configure
	script.

    o	Configure provides a more comprehensive summary of its results.

    o	Index generation now happens when installing source packages
	using R code in package tools.	An existing 'INDEX' file is used